syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Chat.Client";

package chat;

service ChatService {
  rpc Chat (stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string text = 1;
}

message MessageResponse {
  string sender_name = 1;
  string text = 2;
}
